
{{$NEXT}}
          - now also support the server = catagits option, for Catalyst
            repositories hosted at Shadowcat Systems
          - switch to [Test::NoTabs], also testing examples/ files
          - bump prereq on [Test::CheckDeps] to get CPAN::Meta::Check
            dependency that we can now remove from here
          - vim modeline added to .pm in minted dist

0.023     2013-09-11 01:43:22Z (Karen Etheridge)
          - now checking for stale prereqs at dist release time

0.022     2013-09-10 01:48:53Z (Karen Etheridge)
          - warnings tests bypassed during installation, to prevent
            installation issues in the presence of deprecation warnings from
            upstream dependencies (in this case, via Moose 2.1100) - and
            similar change made in test generated via minting profile
          - bumped dependency version for [Test::PodSpelling] and wordlists
          - bumped dependency on Dist::Zilla, for yaml encoding fixes

0.021     2013-09-07 19:41:06Z (Karen Etheridge)
          - disable invocation of cpanm-reporter (see RT#88367)
          - added [MojibakeTests], for testing file encoding at release time

0.020     2013-09-02 23:50:35Z (Karen Etheridge)
          - set new die_on_existing_version option in [PkgVersion]
          - after releasing and we install the dist, submit a cpantesters
            report

0.019     2013-08-21 19:16:27Z (Karen Etheridge)
          - now supporting dists hosted elsewhere than github (currently
            gitmo, p5sagit, or other), via the 'server' option
          - Test::Version now runs in strict mode
          - generated clean-namespaces.t test now skips ::Conflicts module
          - [Test::Kwalitee] now included in bundle, rather than adding it
            into the minted dist.ini separately

0.018     2013-08-16 05:11:06Z (Karen Etheridge)
          - now using [PromptIfStale] to ensure the plugin bundle is always