@@ -10,6 +10,7 @@ license             = {{ $dist->_license_class }}
 
 [@Author::ETHER]
 :version = {{ use Dist::Zilla::PluginBundle::Author::ETHER; Dist::Zilla::PluginBundle::Author::ETHER->VERSION }}
+installer = ModuleBuildTiny
 
 [Prereqs / DevelopRequires]
 Test::Warnings = 0
