@@ -7,6 +7,9 @@ Revision history for {{$dist->name}}
           - bump prereq on [Test::CheckDeps] to get CPAN::Meta::Check
             dependency that we can now remove from here
           - vim modeline added to .pm in minted dist
+          - default 'installer' backend now defaults to 'none', forcing
+            consumers to explicitly state a preference; minted dists specify
+            ModuleBuildTiny, the previous default
 
 0.023     2013-09-11 01:43:22Z (Karen Etheridge)
           - now checking for stale prereqs at dist release time
